Added GAL event for the election of Albrecht in Poland

--- a/localisation/KR_Galicia_l_english.yml
+++ b/localisation/KR_Galicia_l_english.yml
@@ -32,3 +32,7 @@ gal.6.t:0 "The Ukraine has seized Eastern Galicia"
 gal.6.d:0 "Kraków and Lwów are the most important cities of Galicia. The integration of the former has gone smoothly over the run of the last week, however the inhabitants of the mostly Ruthenian-speaking territories surrounding Lwow have, with aid of the Ukrainian military, seized the city. The city of Lwów is too important for Poland to just let it fall into the hands of another country."
 gal.6.a:0 "This shall not stand. Retake what is ours!"
 gal.6.b:0 "Ruthenians aren't Poles anyways."
+
+gal.7.t:0 "Karl Albrecht Elected as King of Poland"
+gal.7.d:0 "The current Governor of Galicia-Lodomeria, Karl Albrecht von Habsburg, has just been elected as the new King of Poland after an intensely contested vote. Karl Albrecht is expected to leave the nation early tomorrow to take up his new position as leader of the Polish people, and has left Jozef Haller von Hallenburg in charge of Galicia in his absence."
+gal.7.a:0 "Wish him luck."
