--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1234,7 +1234,7 @@ UKR_Syndicalist:0 "Ukraine is Syndicalist"
 UKR_Alone:0 "Ukraine is alone"
 pol_nationalists_overthrow_monarchy:0 "§RThe Nationalists seize control!§! \n"
 pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
-POL_gminy_tooltip:0 "You will gain 5 Militia Divisions. \n"
+POL_gminy_tooltip:0 "You will gain §Y5§! Militia Divisions. \n"
 POL_polish_state:0 "You will abolish the monarchy and form the new Polish State."
 UKR_RUSCOUP:0 "Russian Coup in Ukraine"
 russ_gives_passports:0 "Russian-Ukrainian Passports"
