--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -17,6 +17,7 @@ FNG_Japanese_Aid_Cut:0 "Japanese Aid Cut"
 FNG_Buying_Silver:0 "Buying Silver"
 FNG_Central_Bank_Collapse:0 "Central Bank Collapse"
 FNG_Japanese_Military_Mission:0 "Japanese Military Mission"
+FNG_Educational_Vacuum:0 "Educational Vacuum"
 
 ### Informal Empire Mechanic ###
 FNG_informal_empire_1:0 "Expel the Japanese Bandits!"
@@ -957,6 +958,10 @@ fengtian.new.124.a:0 "A terrible loss"
 fengtian.new.125.t:0 "Record Mantetsu Profits"
 fengtian.new.125.d:0 "The South Manchuria Railway Company, colloquially Mantetsu, has long dominated large sectors of Fengtian's economy, and in turn acts as Japan's primary means of influence over our government. While this influence is unwelcome, it brings crucial capital and technology without which the Grand Marshal could never hope to retake China \n\n The Company has today announced record profits, much of which goes to Japan's government in the form of tax revenue."
 fengtian.new.125.a:0 "Is this a necessary evil?"
+
+fengtian.new.126.t:0 "Counterfit Dollars Spread"
+fengtian.new.126.d:0 "In order to save money, the version of the Fengtian Dollar being circulated currently is the same as it was when it was first issued, as quality printing equipment is highly expensive. This seems to have left the currency open to forgery, however, and already there are beleived to be thousands of fake Fengtian dollars circulating."
+fengtian.new.126.a:0 "They will be caught eventually"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
