This focus removes Black Monday idea for Ukraine

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -455,6 +455,9 @@ UKR_Revive_Agriculture_desc:0 "Our main aim was to turn Ukraine into the breadba
 UKR_Donbass_Industry:0 "Donbass Industry"
 UKR_Donbass_Industry_desc:0 "After a long period of political turbulence, the situation in Ukraine is more or less stable. And we have a good chance to continue reforms. Our long-term aim is to develop industry in the East of Ukraine. Thanks to the Tsarist regime, we have just to re-open old Donbass factories and modernise them a little or launch a formation of a new industrial region"
 
+UKR_Stab_econ:0 "Stabilisation"
+UKR_Stab_econ_desc:0 "Thanks to our elaborate measures we could revive our economy and mitigate the consequences of the Black Monday for Ukraine. We can hope that our economy will be soon competitive in Europe."
+
 UKR_Reorg_army:0 "New army of Ukraine"
 UKR_Reorg_army_desc:0 "The army of Ukraine is in poor condition as the Kingdom itself. But though the Berlin Stock Crisis made us reduce the military budget, but we still have enough money to launch the new reform, which will allow us to reorganise the Ministry of defence. It's time to strengthen our independence and secure our borders from the various enemies of Ukraine."
 UKR_Mobile:0 "Plans of Chernyakhovsky"
