jewish baners now known as jewish bankers

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -1180,7 +1180,7 @@ ustates.171.d:0 "After the CSA was defeated, Reed and the CSA evacuated to Franc
 ustates.171.a:0 "He can run for now."
 
 ustates.172.t:0 "Father Charles Coughlin's CBS Radio Broadcasts"
-ustates.172.d:0 "Three years from today, Father Charles Coughlin started doing weekly a radio broadcast in America and more than 50 million people turn on their radios and listen. He is a raving Anti-Semite, claiming that the Syndicalist Revolution in France was 'foremented by the Jew' and that the Berlin Stock Market Crash is an 'International Conspiracy of Jewish Baners' and somehow people still tune in. His hate-speech will not be tolerated by the Church, and the Pope is expected to make a decision whether to ask the United States government to shut down his broadcast so his hateful message cannot reach the public."
+ustates.172.d:0 "Three years from today, Father Charles Coughlin started doing weekly a radio broadcast in America and more than 50 million people turn on their radios and listen. He is a raving Anti-Semite, claiming that the Syndicalist Revolution in France was 'foremented by the Jew' and that the Berlin Stock Market Crash is an 'International Conspiracy of Jewish Bankers' and somehow people still tune in. His hate-speech will not be tolerated by the Church, and the Pope is expected to make a decision whether to ask the United States government to shut down his broadcast so his hateful message cannot reach the public."
 ustates.172.a:0 "Coughlin is a becoming a dangerous proposition, shut him down"
 ustates.172.b:0 "There is nothing we can do"
 
