--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -172,6 +172,10 @@ kr.political.28.a:0 "I want to know everything, EVERYTHING!"
 kr.political.28.b:0 "Only inform me about major events."
 kr.political.28.c:0 "I want none of this nonsense."
 
+kr.political.36.t:0 "No April Fools Joke?"
+kr.political.36.d:0 "In order to prevent multiplayer ruining, to enable the April fools joke you must:\n\n1. Go to the mod files\n\n2. Move KR_Political to the events folder, overwriting the one in there\n\n3. Reload the game and go with this same event chain"
+kr.political.36.a:0 "Got it!"
+
 ### Remove Independent War Event ###
 kr.political.30.t:0 "End of Our Independent War"
 kr.political.30.d:0 "Now that our independent war is over we can call our allies to war again."
