Spelling fixes all over

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -987,7 +987,7 @@ fengtian.informalempire.6.d:0 "Angered by Japan's increasing control over our co
 fengtian.informalempire.6.a:0 "Unfortunate"
 
 fengtian.informalempire.7.t:0 "Major Anti-Japanese Protests"
-fengtian.informalempire.7.d:0 "Angered by the overwhelming control over our country by Japan and Mantetsu, protests have broken out across the country. Police and military units are already on site, but they seem unwilling to go far to limit the protests. While they ought to die down in a few days, it seems unlikely that this will be the last of the protestors unless major changes occur."
+fengtian.informalempire.7.d:0 "Angered by the overwhelming control over our country by Japan and Mantetsu, protests have broken out across the country. Police and military units are already on site, but they seem unwilling to go far to limit the protests. While they ought to die down in a few days, it seems unlikely that this will be the last of the protesters unless major changes occur."
 fengtian.informalempire.7.a:0 "Unfortunate"
 
 ###FNG War Events###
