--- a/localisation/KR_Galicia_l_english.yml
+++ b/localisation/KR_Galicia_l_english.yml
@@ -1,9 +1,6 @@
 ﻿l_english:
 
-##Parties##
-
-
-##Events##
+### Events ###
 gal.1.t:0 "Galicia-Lodomeria becomes independent"
 gal.1.d:0 "After centuries under Habsburg rule that began with the first partition of the Polish-Lithuanian Commonwealth in 1772, Galicia Lodomeria sees herself independent. But we are a weak state surrounded by impressive neighbours - and maybe we would do good seeking protection from Poland, the nation our territory has been taken from all these years ago."
 gal.1.a:0 "Ask to formally join Poland. (This means Game Over if you are a player.)"
