--- a/localisation/KR_Uruguay_l_english.yml
+++ b/localisation/KR_Uruguay_l_english.yml
@@ -23,29 +23,29 @@ URG_totalist_party:0 "PRTT"
 URG_totalist_party_long:0 "Partido da Revolução Transitória Total"
 
 ### Focuses ###
-URG_nationbuilding:0 "Nationbuilding"
-URG_nationbuilding_desc:0 "We will spare no effort in rebuilding Uruguay to the nation it desevres to be, Free and Proud!"
+URG_nationbuilding:0 "Nation Building"
+URG_nationbuilding_desc:0 "We will spare no effort in rebuilding Uruguay to the nation it deserves to be, Free and Proud!"
 URG_expell_argetine_farmers:0 "Expel Argentine Farmers"
 URG_expell_argetine_farmers_desc:0 "Argentina landsharks devoured our farmers, and we must work recover the economy from such a blow"
 URG_infrastructurerenewal:0 "Infrastructure Renewal"
 URG_infrastructurerenewal_desc:0 "War has torn our lands, and railroads everywhere are deathtraps, sabotaged and ill taken care of. We must change that"
 URG_navalconstructioneffort:0 "Naval Construction Effort"
-URG_navalconstructioneffort_desc:0 "If we are to establish a fleet, we will need better facilites than those we currently have in Montevideo"
+URG_navalconstructioneffort_desc:0 "If we are to establish a fleet, we will need better facilities than those we currently have in Montevideo"
 URG_rearmament:0 "Rearmament Focus"
 URG_rearmament_desc:0 "We will use new factories to help our rising military equip itself"
 URG_confiscate_argie_property:0 "Confiscate Argentine Factories"
-URG_confiscate_argie_property_desc:0 "Argentine individuals and companies still own sensitive assets, we will change that to ensure our soveriegnty"
+URG_confiscate_argie_property_desc:0 "Argentine individuals and companies still own sensitive assets, we will change that to ensure our sovereignty"
 URG_defenseprojects:0 "Defensive Projects"
-URG_defenseprojects_desc:0 "Special laws to incentivize strategic industries will be put in place to safeguard our self detetmination"
+URG_defenseprojects_desc:0 "Special laws to incentivise strategic industries will be put in place to safeguard our self determination"
 URG_renewconstiution:0 "Renew the Constitution"
-URG_renewconstiution_desc:0 "We will renew the Old Consituition, reaffirming our commitment to our soveriegnty while reminding our citizens that Argentine goverment was nothing but a military occupation"
+URG_renewconstiution_desc:0 "We will renew the Old Consituition, reaffirming our commitment to our sovereignty while reminding our citizens that Argentine government was nothing but a military occupation"
 URG_newrightsandresponsabilities:0 "New Rights and Responsibilities"
-URG_newrightsandresponsabilities_desc:0 "Freedom isnt Free; Every man must be ready to do his part to safeguard our nation"
+URG_newrightsandresponsabilities_desc:0 "Freedom isn't Free; Every man must be ready to do his part to safeguard our nation"
 URG_heavyinvestment:0 "Heavy Industry Investment"
 URG_heavyinvestment_desc:0 "We will need much more incentives if our industry is to truly thrive"
 URG_fundodedefesadelapatria:0 "Fundo De Defensa de la Patria"
 URG_ladnreform:0 "Enact Land Reform"
-URG_ladnreform_desc:0 "We have a golden oppotunity now to do a sweeping land reform"
+URG_ladnreform_desc:0 "We have a golden opportunity now to do a sweeping land reform"
 URG_horsemen:0 "A Legacy of Cavalrymen"
 URG_horsemen_desc:0 "The Gaucho Legacy lives, and our land reform has allowed us to recruit many of these expert horsemen to the army"
 URG_pecuaria:0 "Ganado Focus"
@@ -57,11 +57,11 @@ URG_uruguayanarmedforces_desc:0 "Our armed forces must be rebuilt if we are not 
 URG_inf:0 "Infantry Equipment Effort"
 URG_inf_desc:0 "More up do date military equipment will be needed to arm our men than the Argentine scraps we currently own"
 URG_mobility:0 "Mobility Doctrines"
-URG_mobility_desc:0 "In the plains of Uruguay, it doesnt take an officer to realize how moving in a fast and efficent manner is the way forward to defend and attack"
+URG_mobility_desc:0 "In the plains of Uruguay, it doesn't take an officer to realise how moving in a fast and efficient manner is the way forward to defend and attack"
 URG_mechanization:0 "Mechanised Warfare"
-URG_mechanization_desc:0 "Our armed forces will need armored speaheads to properly wage war, and the tanks do those as well!"
+URG_mechanization_desc:0 "Our armed forces will need armoured spearheads to properly wage war, and the tanks do those as well!"
 URG_techslot:0 "Military Science Developments"
-URG_techslot_desc:0 "We will ensure our army is not left behind in the race of military techonology sweeping the globe as we speak"
+URG_techslot_desc:0 "We will ensure our army is not left behind in the race of military technology sweeping the globe as we speak"
 URG_airbases:0 "Expanded Airbases"
 URG_airbases_desc:0 "Our airfields will be expanded, to allow us and our allies to use them at the same time"
 URG_fightereffort:0 "Defend the Skies"
@@ -69,9 +69,9 @@ URG_fightereffort_desc:0 "We must fend off any foreign attempts to attain air su
 URG_cas:0 "Close Air Support Effort"
 URG_cas_desc:0 "We will ensure our airforce has close air support bomber craft at is disposal, and qualified pilots as well"
 URG_rivelplate:0 "Uruguayan Navy
-URG_rivelplate_desc:0 "Rebuilding a navy from scratch is not easy feat, but we will tackle the challange!"
+URG_rivelplate_desc:0 "Rebuilding a navy from scratch is not easy feat, but we will tackle the challenge!"
 URG_coastaldefenses:0 "Coastal Defences"
-URG_coastaldefenses_desc:0 "We will ensure Montevideo is safe from any naval incursions, with the building of coastal defenses"
+URG_coastaldefenses_desc:0 "We will ensure Montevideo is safe from any naval incursions, with the building of coastal defences"
 URG_specialforces:0 "Special Forces"
 URG_specialforces_desc:0 "Special units will be trained to tackle difficult or hazardous terrain"
 URG_artigaslegiom:0 "Artigas Legion"
