I am dumb french man is smart

--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -172,8 +172,8 @@ kr.political.28.a:0 "I want to know everything, EVERYTHING!"
 kr.political.28.b:0 "Only inform me about major events."
 kr.political.28.c:0 "I want none of this nonsense."
 
-kr.political.36.t:0 "No April Fools Joke?"
-kr.political.36.d:0 "In order to prevent multiplayer ruining, to enable the April fools joke you must:\n\n1. Go to the mod files\n\n2. Move KR_Political to the events folder, overwriting the one in there\n\n3. Reload the game and go with this same event chain"
+kr.political.36.t:0 "Where is the April Fools Joke?"
+kr.political.36.d:0 "In order to prevent multiplayer ruining, this event now longer automatically activates the April fools joke. Instead, all you have to do is open the in game console and type: "event april.1", simple!"
 kr.political.36.a:0 "Got it!"
 
 ### Remove Independent War Event ###
