small BHC loc fix

--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -518,7 +518,7 @@ beng.104.d:0 "A veritable mass of patterns of different ethnicities, religious, 
 beng.104.a:0 "The army shall guard the rights of all the peoples of India!"
 beng.104.b:0 "Untouchability is a sin. Let the people know it!"
 beng.104.c:0 "A slow implementation of equal rights will secure stability"
-beng.104.d:0 "Create workers' committees to ensure equality"
+beng.104.e:0 "Create workers' committees to ensure equality"
 beng.105.t:0 "Bose's Maximists Control Congress"
 beng.105.d:0 "As the special session of the INC concludes, a clear majority has gathered around the arguments of the martial giant Subhas Chandra Bose and his Maximists. With a clear mandate, it now falls on Bose to implement a new order on the Indian subcontinent and facilitate the birth of a Totalist Raj."
 beng.105.a:0 "A Totalist Raj arises!"
