--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -108,7 +108,7 @@ POL_a_new_navy:0 "The New Polish Navy"
 POL_pride_of_the_baltic:0 "Pride of the Baltic"
 POL_polish_marines:0 "Foreign Polish Expeditions"
 POL_naval_industry:0 "Naval Buildup in Gdansk"
-POL_gdansk_agreement:0 "The Poznan Agreement"
+POL_gdansk_agreement:0 "The Plotzk Agreement"
 POL_sieze_gdansk:0 "Crush Germany"
 POL_poland_forever:0 "Poland Forever"
 POL_beacon_of_polish_spirit:0 "Beacon of Polish Spirit"
@@ -210,7 +210,7 @@ POL_a_new_navy_desc:0 "If we are to stand proud among the great nations of Europ
 POL_pride_of_the_baltic_desc:0 "No navy is complete without a flagship to lead it. We must begin the planning and construction of a new model of Battleship to lead the Polish fleet in the years to come."
 POL_polish_marines_desc:0 "The future of Poland rests not only at home, but overseas as well. Being so long without a coastline, we must work hard to create a new set of tactics for extending our might overseas, so that no enemy may escape our reach."
 POL_naval_industry_desc:0 "Having retaken the historic city of Gdansk, we must use its massive ports and naval infrastructure to build a new Baltic fleet that will be the envy of Europe."
-POL_gdansk_agreement_desc:0 "Our diplomatic position is stronger than it has ever been in the past 20 years. We must leverage this advantage to send a diplomatic envoy to Berlin, requesting the return of the rightful territory of Poznan to the Polish people. It is unlikely to succeed, but there is no harm in trying..."
+POL_gdansk_agreement_desc:0 "Our diplomatic position is stronger than it has ever been in the past 20 years. We must leverage this advantage to send a diplomatic envoy to Berlin, requesting the return of the rightful territory of Plotzk to the Polish people. It is unlikely to succeed, but there is no harm in trying..."
 POL_sieze_gdansk_desc:0 "Germany is weak and dying. There is no better time to strike and seize what is rightfully ours! We must demand that Germany return our rightful lands to us, or face our wrath!"
 POL_poland_forever_desc:0 "Even if Poland is destroyed, even if the Polish state collapses into ruin, the Polish spirit will not be destroyed. Poland will live on forever in the hearts of the Polish people, and it will rise again, even if it takes another century of struggle."
 POL_beacon_of_polish_spirit_desc:0 "The new Polish nation stands as a beacon of the Polish spirit, drawing all true Poles to defend her in the coming wars. Poland remains a bastion of her people, and shall stand tall and true!"
@@ -958,15 +958,15 @@ poland.141.a:0 "We shall care for them well."
 poland.142.t:0 "Lithuania Defiant"
 poland.142.d:0 "Lithuania has refused our offer of benevolent control, instead claiming that our offer is a grave insult to their ideals. Without our protection, they will surely be destroyed."
 poland.142.a:0 "How could they?!"
-poland.143.t:0 "Poland Seeks Poznan"
-poland.143.d:0 "After the election of [POL.GetLeader], Poland has been drifting ever closer into our sphere of influence. As a result of this close relationship, Poland is now seeking to acquire the territory of Poznan from us, which has a large Polish majority. In exchange, Poland will renounce any and all claims they hold to other Polish-majority regions we control. If we were to agree, it would cement a strong relationship with Poland. However, for us to cede any territory would certainly be seen as a sign of weakness..."
+poland.143.t:0 "Poland Seeks Plotzk"
+poland.143.d:0 "After the election of [POL.GetLeader], Poland has been drifting ever closer into our sphere of influence. As a result of this close relationship, Poland is now seeking to acquire the territory of Plotzk from us, which has a large Polish majority. In exchange, Poland will renounce any and all claims they hold to other Polish-majority regions we control. If we were to agree, it would cement a strong relationship with Poland. However, for us to cede any territory would certainly be seen as a sign of weakness..."
 poland.143.a:0 "It is a fair trade."
 poland.143.b:0 "Us? Surrendering territory? Unthinkable!"
 poland.144.t:0 "The Kaiser Agrees"
-poland.144.d:0 "Germany has agreed to our proposal for the cession of Poznan in exchange for us renouncing our claims on other Polish territory they hold. With this transfer of territory, we can now welcome back millions of our brethren back into Poland proper."
+poland.144.d:0 "Germany has agreed to our proposal for the cession of Plotzk in exchange for us renouncing our claims on other Polish territory they hold. With this transfer of territory, we can now welcome back millions of our brethren back into Poland proper."
 poland.144.a:0 "R-really?"
 poland.145.t:0 "An Unacceptable Trade"
-poland.145.d:0 "The Kaiser has flatly denied our request for territory, stating that they only deal with "proper nations" and that we should learn our place in the European hierarchy. It seems like we shall not be seeing Poznan under our care for some time."
+poland.145.d:0 "The Kaiser has flatly denied our request for territory, stating that they only deal with "proper nations" and that we should learn our place in the European hierarchy. It seems like we shall not be seeing Plotzk under our care for some time."
 poland.145.a:0 "To be expected..."
 poland.146.t:0 "Poland Seeks Protection"
 poland.146.d:0 "Looking outward from their current precarious position in Europe, the nascent Polish Republic has come to us with a request to join our alliance. While Poland is diplomatically isolated in Europe, it could prove worthwhile to have another ally in Europe, no matter how small."
@@ -1133,7 +1133,7 @@ poland.189.t:0 "The Polish Ultimatum"
 poland.189.d:0 "Poland has sent us an ultimatum, return their territory or they will take it by force. Their ability to make good on these threats is uncertain, but we cannot simply ignore their threat."
 poland.189.a:0 "We're not in a position to refuse."
 poland.189.b:0 "Never!"
-poland.190.t:0 "Poznan is ours!"
+poland.190.t:0 "Plotzk is ours!"
 poland.190.d:0 "The cowards have given in to our demands, returning our territory to us without so much as a fight!"
 poland.190.a:0 "Another rightful part of Poland, returned."
 poland.191.t:0 "We've Been Denied!"
