--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -268,7 +268,7 @@ mexico.65.t:0 "Mexico accepts our demands"
 mexico.65.d:0 "The government of Mexico has folded before our might and accepted our demands. Now the former western and southwestern states are back under our American control!"
 mexico.65.a:0 "Great!"
 mexico.66.t:0 "Mexico declines our demands"
-mexico.66.d:0 "The goverThe United Provinces have accepted"nment of Mexico has refused to follow our demands and are insisting that the occupied western and southwestern American states are their rightful territory. We must attack them now!"
+mexico.66.d:0 "The government of Mexico has refused to follow our demands and are insisting that the occupied western and southwestern American states are their rightful territory. We must attack them now!"
 mexico.66.a:0 "That's it - Ready the troops and attack"
 mexico.66.b:0 "We're not ready for war now - Back down"
 mexico.67.t:0 "Peace with the Mexicans"
