--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -597,7 +597,7 @@ annex.153.t:0 "The destiny of Italy"
 annex.153.d:0 "We now have to decide what to do with Italy. We can't control those territories forever and we might have to think about creating a puppet Italian state."
 annex.153.a:0 "Liberate the Italian Federation"
 annex.153.b:0 "Liberate the Socialist Republic of Italy"
-annex.153.c:0 "Give the territory to our Socialist Italian comrades"
+annex.153.c:0 "Give the territory to our South Italian friends"
 annex.154.t:0 "The Fate of the Netherlands"
 annex.154.d:0 "After a short campaign across the marshes and the urban centres of the Netherlands, we have managed to take down the proud nation. The Netherlands are now in our hands! We must now decide on its future."
 annex.155.t:0 "The Fate of Denmark"
