added Mahatma trait for Gandhi

--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -41,6 +41,7 @@ BHC_cautious_support:0 "Cautious support"
 BHC_approves_government:0 "Approves of the new government"
 
 ### Tooltips ###
+mahatma:0 "Mahatma"
 BHC_INC_meeting_done:0 "INC Meeting has adjourned\n"
 BHC_focus_paratrooper_tt:0 "Red Lions Air Corps paratroopers will be deployed in Bharatiya Commune\n"
 BHC_attended_congress:0 "Accepted invitation to the First Congress of the Third Internationale\n"
