--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
 
 ### Flags and Tooltips ###
+chamberofprinces:0 "Chamber of Princes"
 PRF_Osman_Paternal_Autocrat:0 "§YOsman Ali Khan§! becomes §YPaternal Autocrat§!\n"
 PRF_reforms_forced:0 "Reforms forced via civil war"
 PRF_aggressive_stance:0 "Aggressive Stance"
