--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -84,6 +84,9 @@ SPR_force_cntfai:0 "Use force to disperse §YCNT-FAI§! supporters and keep them
 SPR_allow_cntfai:0 "§YCNT-FAI§! will be allowed to operate within [SPR.GetNameDef]\n"
 SPR_free_elections:0 "Elections will soon be held, open to any party\n"
 SPR_rig_elections:0 "Elections will soon be held, disallowing Carlists or CNT-FAI\n"
+SPR_ruling_party_wins:0 "The ruling party wins the elections!\n"
+SPR_CNT_wins:0 "The CNT-FAI wins the elections!\n"
+SPR_CAR_wins:0 "The Carlists win the elections!\n"
 SPR_become_CNT:0 "§Y[SPR.GetNameDef]§! becomes §Y[CNT.GetNameDef]§!\n"
 SPR_become_CAR:0 "§Y[SPR.GetNameDef]§! becomes §Y[CAR.GetNameDef]§!\n"
 SPR_cancel_election:0 "The elections will be §Rcanceled§!\n"
@@ -327,9 +330,7 @@ sprd.22.c:0 "The King is not dead! Do nothing!"
 
 sprd.23.t:0 "General Elections"
 sprd.23.d:0 "The elections have been held and all parties have agreed and acted in good faith."
-sprd.23.a:0 "The ruling party wins!"
-sprd.23.b:0 "A CNT-FAI Victory!"
-sprd.23.c:0 "The Carlists win!"
+sprd.23.a:0 "The votes have yet to be counted..."
 
 sprd.24.t:0 "Elections - cancelled"
 sprd.24.d:0 "Due to the civil war the elections have been officially cancelled"
@@ -364,6 +365,18 @@ sprd.32.a:0 "We have thrown our lot in with theirs..."
 sprd.33.t:0 "[From.GetName] Refuses"
 sprd.33.d:0 "Diplomats from [From.GetNameDef] have refused any offers of alliance or requests for the protection of [Root.GetAdjective] independence. We are on our own."
 sprd.33.a:0 "So be it"
+
+sprd.34.t:0 "Civil War Averted!"
+sprd.34.d:0 "Despite violence held during the election and immediate protests which have sprung up throughout Spain as the results are announced, it's clear: the Acción Popular remains in power, and the kingdom remains whole. The entire nation is breathing a sigh of relief, and despite obvious attempts by Carlists and CNT-FAI supporters to stir up trouble, everyone knows that the election was fair. They will not have the support for the uprising they crave, not now and perhaps not ever."
+sprd.34.a:0 "Freedo has won the day"
+
+sprd.35.t:0 "The CNT-FAI are Victorious!"
+sprd.35.d:0 "Though some question the veracity of the vote, there can be no question to most that the election was fair...and the CNT-FAI have eked out a narrow victory at the polls. The royal advisors suggest that the results of the election need not be abided by. Indeed, should the government be turned over to the anarcho-syndicalists, it's very likely the royal family will be immediately deposed if not outright endangered."
+sprd.35.a:0 "No, we will abide by the result"
+sprd.35.b:0 "Invalidate the election!"
+
+sprd.36.t:0 "The Carlists are Victorious!"
+sprd.36.d:0 "Though some question the veracity of the vote, there can be no question to most that the election was fair...and the Carlists have eked out a narrow victory over the anarcho-syndicalists and our own Acción Popular. The royal advisors give word that Javier is already on his way to the palace, and if the regent wishes to invalidate the election results he must move quickly. There is, after all, no telling whether Javier will keep his word and show mercy to the royal family."
 
 ### Post-War ###
 
