Now the olympic country selection event should work

--- a/localisation/KR_Olympics_l_english.yml
+++ b/localisation/KR_Olympics_l_english.yml
@@ -4,6 +4,8 @@
 olympics.1.t:0 "Electing the City"
 olympics.1.d:0 "You don't see this"
 olympics.1.a:0 "Here we Go!"
+olympics.1.b:0 "Here we Go!"
+olympics.1.c:0 "Here we Go!"
 
 olympics.2.t:0 "Olympics in Stockholm!"
 olympics.2.d:0 "All Stockholm citizens have followed the Olympics, either via radio, newspaper, or in the stadiums. There will be over four thousand athletes, most of them men, from nearly every European country except the Syndicalist ones and from other continents too. The atmosphere is poisoned with nationalism, manifesting in unhealthy rooting for the national teams and a hostile atmosphere between teams. Every Swede is proud of his nation hosting the Olympics in Stockholm."
