--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -140,10 +140,10 @@ NEE_radical_socialist_party:0 "CSNE"
 NEE_radical_socialist_party_long:0 "Combined Syndicates of New England"
 NEE_syndicalist_party:0 "CSNE"
 NEE_syndicalist_party_long:0 "Combined Syndicates of New England"
-NEE_social_democrat_party:0 "Progressive Party"
-NEE_social_democrat_party_long:0 "Progressive Party"
-NEE_social_liberal_party:0 "Working Families Party"
-NEE_social_liberal_party_long:0 "Working Families Party"
+NEE_social_democrat_party:0 "Labor Party"
+NEE_social_democrat_party_long:0 "New England Labor Party"
+NEE_social_liberal_party:0 "Progressive Party"
+NEE_social_liberal_party_long:0 "New England Progressive Party"
 NEE_market_liberal_party:0 "Yankee Party"
 NEE_market_liberal_party_long:0 "Yankee Party"
 NEE_social_conservative_party:0 "Federalist Party"
