Pushing fixes an alterations from yestereday

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -229,10 +229,10 @@ mogadishu_naval_yard:0 "Mogadishu Naval Yard"
 
 ### Fengtian ###
 mantetsu_industrial_subsiduaries:0 "Mantetsu Industrial Subsiduaries"
-mudken_arsenal:0 "Mudken Arsenal"
+mukden_arsenal:0 "Mukden Arsenal"
 minsheng_automobile_company:0 "Minsheng Automobile Company"
 mitsubishi_heavy_industries:0 "Mitsubishi Heavy Industries"
-manchuria_airplane_company:0 "Manchuria Airplane Manufacturing Company"
+manchuria_airplane_company:0 "Dongbei Airplane Manufacturing Company"
 manchuria_aviation_company:0 "Manchuria Aviation Company"
 
 ### Finland ###
