--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -38,6 +38,7 @@ FNG_WIP:0 "This focus is a Work in Progress, and will be completed along with th
 
 ### Focus Flags ###
 doihara_cigarettes:0 "Doihara's Proposal"
+lavrov_affair:0 "The Lavrov Affair"
 
 ### Parties ###
 FNG_totalist_party:0 "Manchu Communist Party"
@@ -962,6 +963,12 @@ fengtian.new.125.a:0 "Is this a necessary evil?"
 fengtian.new.126.t:0 "Counterfit Dollars Spread"
 fengtian.new.126.d:0 "In order to save money, the version of the Fengtian Dollar being circulated currently is the same as it was when it was first issued, as quality printing equipment is highly expensive. This seems to have left the currency open to forgery, however, and already there are beleived to be thousands of fake Fengtian dollars circulating."
 fengtian.new.126.a:0 "They will be caught eventually"
+
+fengtian.new.127.t:0 "The Lavrov Affair"
+fengtian.new.127.d:0 "With the breakdown of order across much of Russia, a circumspect fellow calling himself only 'Lavrov' has appeared at the border-town of Heihe in Heilongjiang, requesting asylum. In return, he's offering partial blueprints and documentation for one of Russia's more recent aircraft designs, which he claims to be the rightful owner of, but which seems more likely to be stolen. \n\n Accepting could risk a diplomatic incident if Russia regains control of its Far East, and Transamur has already lodged a request for custody of Lavrov, as he's 'their citizen'. On the other hand, this could be a lucky opportunity to devlop our own aircraft technology without reliance on Japan."
+fengtian.new.127.a:0 "Grant him asylum"
+fengtian.new.127.b:0 "Hand him over to Transamur"
+fengtian.new.127.c:0 "Send him back"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
