--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -874,7 +874,7 @@ japfor.202.a:0 "We have no choice"
 japfor.202.b:0 "This is of their own making"
 
 japfor.203.t:0 "Fengtian Blames us for the Silver Crisis!"
-japfor.203.d:0 "Fengtian has loudly denounced Japan, citing what they say is a deliberate plot to destabilise their government through the eruption of their recent Silver Crisis, citing the incidental requests from both the Bank of Japan and Mitsui Bank for repayment on loans backed by Fengtian's silver reserve. With the reserve apparently containing far less than the Fengtian government claimed, its economy has spiralled out of control as the government loses credibility by the hour, and it seems likely that this crass and foolish attempt to deflect blame is mostly a reaction to their internal political situation. \n\n All the same, we can deny these ridiculous assertions, but can we also let this grave insolence go unpunished?"
+japfor.203.d:0 "Fengtian has loudly denounced our government, citing what they say is a deliberate plot to destabilise their government through the eruption of their recent Silver Crisis, citing the incidental requests from both the Bank of Japan and Mitsui Bank for repayment on loans backed by Fengtian's silver reserve. With the reserve apparently containing far less than the Fengtian government claimed, its economy has spiralled out of control as the government loses credibility by the hour, and it seems likely that this crass and foolish attempt to deflect blame is mostly a reaction to their internal political situation. \n\n All the same, we can deny these ridiculous assertions, but can we also let this grave insolence go unpunished?"
 japfor.203.a:0 "False accusations!"
 japfor.203.b:0 "Punish this insolence!"
 
