--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -62,7 +62,7 @@ camel_corpse:0 "Imperial Camel Corps"
 OTT_camel_corpse_effect:0 "Enables §HImperial Camel Corps§!\n§HCavalry\n    Desert§!\n      Attack: §G+15%§!\n      Defense: §G+5%§!\n      Movement: §G+3%§!\n\n"
 OTT_desert_tt:0 "§GOttoman Desert Corps§! will help us control desert areas better.\n§ROttoman Desert Rangers§! now patrol the wastes\n"
 OTT_german_approval_tt:0 "§RThe German Empire needs to agree§!\n"
-ott_opda_flag_tt:0 " §RWe need to get rid of the OPDA before we can make investments§!\n"
+ott_opda_flag_tt:0 " §RWe need to get rid of the OPDA and enact administrative reforms before we can make investments§!\n"
 ott_opda_end_tt:0 "§GEconomy, Air Force and Navy focuses are now unlocked!§!\n"
 ott_politicians_arrested_tt:0 "Remove §YPoliticians§!:\n"
 ott_new_reformers:0 " The New Reformers\n"
