Why was this ever changed???

--- a/localisation/modifiers_l_english.yml
+++ b/localisation/modifiers_l_english.yml
@@ -35,9 +35,9 @@ MODIFIER_RESISTANCE_TICK_AUTO:0 "Daily Resistance Growth"
 MODIFIER_LOCAL_RESOURCES:0 "Local Resource Gain"
 MODIFIER_LOCAL_RESOURCES_FACTOR:0 "Resource Gain"
 MODIFIER_LOCAL_RESOURCES_FACTOR_DESC:0 "Modifies the amount of resources gained"
-MODIFIER_LOCAL_MANPOWER:0 "Local Manpower Efficiency"
-MODIFIER_LOCAL_SUPPLIES:0 "Local Supply Efficiency"
-MODIFIER_LOCAL_FACTORIES:0 "Local Factory Efficiency"
+MODIFIER_LOCAL_MANPOWER:0 "Local Manpower"
+MODIFIER_LOCAL_SUPPLIES:0 "Local Supply"
+MODIFIER_LOCAL_FACTORIES:0 "Local Factory"
 MODIFIER_LOCAL_INTEL_TO_ENEMIES:0 "Intel to Enemies"
 MODIFIER_LOCAL_FACTORY_SABOTAGE:0 "Chance to Sabotage Constructions"
 MODIFIER_ATTRITION:0 "Division Attrition"
