--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -68,7 +68,7 @@ kr.political.7.d:0 "With our recent increase of political power, the end is in s
 kr.political.7.a:0 "We are almost back to normal."
 
 kr.political.8.t:0 "Increase in Stability!"
-kr.political.8.d:0 "With our recent increase of political power, we are finally stable once more. The people trust us to run daily business again, and calm returns to the strets, hopefully this won't happen again."
+kr.political.8.d:0 "With our recent increase of political power, we are finally stable once more. The people trust us to run daily business again, and calm returns to the streets, hopefully this won't happen again."
 kr.political.8.a:0 "The [Root.GetAdjective] nation is strong."
 
 kr.political.9.t:0 "Potential Increase in Stability"
@@ -77,24 +77,24 @@ kr.political.9.a:0 "I understand how to raise my stability."
 
 ### Popularity Events ###
 kr.political.11.t:0 "Very High Popularity"
-kr.political.11.d:0 "The civilian support for the ruling party has reached a very high level, which influences our political power. Our political opposition is nearly inexistent and we stand in position to push any reform we please."
-kr.political.11.a:0 "This overwhelming support strengthens our cause!"
+kr.political.11.d:0 "The civilian support for the ruling party has reached a very high level, which influences our political power. Our political opposition is nearly nonexistent and we stand in position to push any reform we please."
+kr.political.11.a:0 "Great!"
 
 kr.political.12.t:0 "High Popularity"
 kr.political.12.d:0 "The civilian support for the ruling party has reached a high level, which influences our political power. Our political opposition is entrenched and only the most divisive reforms need our personal investment."
-kr.political.12.a:0 "We thank our citizens for their trust."
+kr.political.12.a:0 "Nice!"
 
 kr.political.13.t:0 "Average Popularity"
 kr.political.13.d:0 "The civilian support for the ruling party has reached an average level, which influences our political power. While we may need to consult our opposition for some reforms, we can still govern well."
-kr.political.13.a:0 "Majority support is all we need."
+kr.political.13.a:0 "Good."
 
 kr.political.14.t:0 "Low Popularity"
 kr.political.14.d:0 "The civilian support for the ruling party has reached a low level, which influences our political power. Our opposition is strong enough to form coalitions against us, forcing us to consult and compromise with them often."
-kr.political.14.a:0 "We might have to make some compromises."
+kr.political.14.a:0 "This is bad."
 
 kr.political.15.t:0 "Very Low Popularity"
-kr.political.15.d:0 "The civilian support for the ruling party has reached a very low level, which influences our political power. Our party is nearly inexistent, and our reforms live or die on the whims of the opposition."
-kr.political.15.a:0 "We will manage to govern in the end."
+kr.political.15.d:0 "The civilian support for the ruling party has reached a very low level, which influences our political power. Our party is nearly nonexistent, and our reforms live or die on the whims of the opposition."
+kr.political.15.a:0 "It's a catastrophe!"
 
 ### Minister Influences Ruling Party Events ###
 kr.political.16.t:0 "A Minister Supports His Ideology"
