--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -67,7 +67,7 @@ USA_protector_of_democracy:0 "Protector of Democracy"
 USA_protector_of_democracy_desc:0 "MacArthur has come to protect America from her enemies not to become them. He will proudly defend the american way of life from all which threaten her hallowed institutions."
 USA_domestic_enemies:0 "Destroy Domestic Enemies"
 USA_domestic_enemies_desc:0 "I am concerned for the security of our great Nation; not so much because of any threat from without, but because of the insidious forces working from within."
-USA_martial_law:0 "Declare martial Law"
+USA_martial_law:0 "Declare Martial Law"
 USA_martial_law_desc:0 "To protect America from all enemies, Martial Law must sadly be declared in order to focus all of America's energy on destroying radicalism from both the right and left. America shall survive this crisis as she has all others! "
 USA_army_education:0 "Army Education"
 USA_army_education_desc:0 "Education Reform is greatly needed for the country. To better defend America, what is needed is a proper military education for the American people. This education will focus on patriotism and what it means to be American. This will help improve the moral of our soldiers and provide more of them to fight for America."
@@ -397,7 +397,7 @@ usa_cw_average:0 "American Civil War"
 USA_great_depression:0 "The Great Depression"
 USA_great_depression_desc:0 "Since the collapse of the New York Stock Market in 1925, the United States has been gripped by the Great Depression. In addition to the massive economic woes plaguing America from this never-ending crisis; the Great Depression has given energy to both Long and Reed as they campaign against one another and the establishment."
 USA_black_monday:0 "The Great Depression"
-USA_black_monday_desc:0 "The Great Depression which has been gripping America for over a decade looked to be slowly recovering under the hoover administration, though no where near fast enough. However the recent collapse of the Berlin Stock Market has just made the Great Depression even worse. Only God and the next President knows when this can be over."
+USA_black_monday_desc:0 "The Great Depression which has been gripping America for over a decade looked to be slowly recovering under the Hoover administration, though no where near fast enough. However the recent collapse of the Berlin Stock Market has just made the Great Depression even worse. Only God and the next President knows when this can be over."
 USA_worst_is_over:0 "The Worst is over"
 USA_worst_is_over_desc:0 "Reforms that have begun following the election have slowly but surely are bringing the economy back on its feet. It will take some time to fully recover though. With fears of a civil war though spreading through the country, some businesses wonder if this will actually jump start the economy, but who wants to take that risk..."
 USA_expanded_fbi:0 "Expanded FBI"
