--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -64,7 +64,7 @@ USA_wagner_act_desc:0 "Curtis has sat down with Reed and has hashed out a compro
 USA_general_macarthur:0 "General MacArthur"
 USA_general_macarthur_desc:0 "The threat to America is grave indeed, in order to safeguard America, MacArthur must take charge and keep the country safe from any and all threats foreign or domestic."
 USA_protector_of_democracy:0 "Protector of Democracy"
-USA_protector_of_democracy_desc:0 "MacArthur has come to protect America from her enemies not to become them. He will proudly defend the american way of life from all which threaten her hallowed institutions."
+USA_protector_of_democracy_desc:0 "MacArthur has come to protect America from her enemies not to become them. He will proudly defend the American way of life from all which threaten her hallowed institutions."
 USA_domestic_enemies:0 "Destroy Domestic Enemies"
 USA_domestic_enemies_desc:0 "I am concerned for the security of our great Nation; not so much because of any threat from without, but because of the insidious forces working from within."
 USA_martial_law:0 "Declare Martial Law"
