--- a/localisation/KR_Equip_Air_l_english.yml
+++ b/localisation/KR_Equip_Air_l_english.yml
@@ -1044,7 +1044,7 @@ BEL_cv_fighter_equipment_2_short:0 "R-38 AN"
 #BEL_jet_fighter_equipment_2_short:0 "Hunter"
 BEL_CAS_equipment_1:0 "Sabca-Caproni 47"
 BEL_CAS_equipment_1_short:0 "S.47"
-BEL_CAS_equipment_1_desc:0 "This close air support aircraft suffered in 1940 from an insufficent speed, making it an easy target, and an insufficient payload, making the destruction of the bridges of the Canal Albert impossible for the poor pilots assigned on those last chance missions." 
+BEL_CAS_equipment_1_desc:0 "This close air support aircraft suffered in 1940 from an insufficient speed, making it an easy target, and an insufficient payload, making the destruction of the bridges of the Canal Albert impossible for the poor pilots assigned on those last chance missions." 
 BEL_CAS_equipment_2:0 "Renard 37 B 14N"
 BEL_CAS_equipment_2_short:0 "R-37 B"
 BEL_CAS_equipment_2_desc:0 "The Renard 37 B is a biplace variant of the R37 for ground attacks, as only a prototype of the fighter version was built, it stayed on paper and was never made."
@@ -1069,12 +1069,12 @@ BEL_nav_bomber_equipment_2_desc:0 "First revision of the R36 prototype, the Rena
 #BEL_heavy_fighter_equipment_1_short:0 "Potez 630"
 BEL_heavy_fighter_equipment_3:0 "Renard 42"
 BEL_heavy_fighter_equipment_3_short:0 "R-42"
-BEL_heavy_fighter_equipment_3_desc:0 "The R-42 is a twin fighter long range variant of the R-36 and subsequent designs (R-38, R-40), an idea later developped in the american F-82 Twin Mustang. Due to the war it was only sketched." 
+BEL_heavy_fighter_equipment_3_desc:0 "The R-42 is a twin fighter long range variant of the R-36 and subsequent designs (R-38, R-40), an idea later developed in the American F-82 Twin Mustang. Due to the war it was only sketched." 
 #BEL_heavy_fighter_equipment_2:0 "Breguet 690"
 #BEL_heavy_fighter_equipment_2_short:0 "Bre 690"
 BEL_tac_bomber_equipment_0:0 "LACAB GR.8" -> Level 0 not level 1
 BEL_tac_bomber_equipment_0_short:0 "GR.8"
-BEL_tac_bomber_equipment_0_desc:0 "The GR.8, nicknamed 'Doryphore' (meaning 'Potato Bug' because of its poor flying capabilities) was made in order to serve as a multiprupose aircraft for the Belgian air force. Supposed to serve as a bomber, a reconnaisance aircraft and a heavy fighter it followed the ludicrous demands of the Belgian army to the letter...and was consequently bad in all of those roles."   
+BEL_tac_bomber_equipment_0_desc:0 "The GR.8, nicknamed 'Doryphore' (meaning 'Potato Bug' because of its poor flying capabilities) was made in order to serve as a multiprupose aircraft for the Belgian air force. Supposed to serve as a bomber, a reconnaissance aircraft and a heavy fighter it followed the ludicrous demands of the Belgian army to the letter...and was consequently bad in all of those roles."   
 BEL_tac_bomber_equipment_1:0 " SABCA S.45"
 BEL_tac_bomber_equipment_1_short:0 " SABCA S.45" 
 BEL_tac_bomber_equipment_1_desc:0 "The SABCA S.45 is a licence built Caproni Ca.135 to enable a greater production of planes than Italy's limited capabilities. With this experience in bomber building the Belgian could have easily built more of those for their own use, but they never did." 
