Added UoB plane sprites

--- a/localisation/KR_Equip_Air_l_english.yml
+++ b/localisation/KR_Equip_Air_l_english.yml
@@ -244,76 +244,76 @@ GER_cv_fighter_equipment_2:0 "Messerschmitt Bf 109 T"
 GER_cv_fighter_equipment_2_short:0 "Bf 109 T"
 GER_cv_fighter_equipment_3:0 "Blohm & Voss BV 155"
 GER_cv_fighter_equipment_3_short:0 "BV 155"
-ENG_fighter_equipment_0:0 "Gloster Gladiator"
-ENG_fighter_equipment_0_short:0 "Gladiator"
+ENG_fighter_equipment_0:0 "Hawker Fury"
+ENG_fighter_equipment_0_short:0 "Fury"
 ENG_fighter_equipment_1:0 "Hawker Hurricane"
 ENG_fighter_equipment_1_short:0 "Hurricane"
 ENG_fighter_equipment_2:0 "Supermarine Spitfire"
 ENG_fighter_equipment_2_short:0 "Spitfire"
 ENG_fighter_equipment_3:0 "Supermarine Spiteful"
 ENG_fighter_equipment_3_short:0 "Spiteful"
-ENG_heavy_fighter_equipment_1:0 "Bristol Blenheim"
-ENG_heavy_fighter_equipment_1_short:0 "Blenheim"
-ENG_heavy_fighter_equipment_2:0 "Bristol Beaufighter"
-ENG_heavy_fighter_equipment_2_short:0 "Beaufighter"
-ENG_heavy_fighter_equipment_3:0 "de Havilland Mosquito FB"
-ENG_heavy_fighter_equipment_3_short:0 "Mosquito FB"
-ENG_strat_bomber_equipment_1:0 "Handley Page Halifax"
-ENG_strat_bomber_equipment_1_short:0 "Halifax"
-ENG_strat_bomber_equipment_2:0 "Avro Lancaster"
-ENG_strat_bomber_equipment_2_short:0 "Lancaster"
-ENG_strat_bomber_equipment_3:0 "Avro Lincoln"
-ENG_strat_bomber_equipment_3_short:0 "Lincoln"
-ENG_jet_fighter_equipment_1:0 "Gloster Meteor"
+ENG_heavy_fighter_equipment_1:0 "Westland Whirlwind"
+ENG_heavy_fighter_equipment_1_short:0 "Whirlwind"
+ENG_heavy_fighter_equipment_2:0 "Westland Welkin"
+ENG_heavy_fighter_equipment_2_short:0 "Welkin"
+ENG_heavy_fighter_equipment_3:0 "de Havilland Hornet"
+ENG_heavy_fighter_equipment_3_short:0 "Hornet"
+ENG_strat_bomber_equipment_1:0 "Armstrong-Whitworth Whitley"
+ENG_strat_bomber_equipment_1_short:0 "Whitley"
+ENG_strat_bomber_equipment_2:0 "Handley-Page Calderdale"
+ENG_strat_bomber_equipment_2_short:0 "Calderdale"
+ENG_strat_bomber_equipment_3:0 "Short Stirling"
+ENG_strat_bomber_equipment_3_short:0 "Stirling"
+ENG_jet_fighter_equipment_1:0 "Hawker Star"
 ENG_jet_fighter_equipment_1_short:0 "Meteor"
 ENG_jet_fighter_equipment_2:0 "de Havilland Vampire"
 ENG_jet_fighter_equipment_2_short:0 "Vampire"
-ENG_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
+ENG_jet_strat_bomber_equipment_1:0 "Handley-Page Courageous"
 ENG_jet_strat_bomber_equipment_1_short:0 "Valiant"
-ENG_tac_bomber_equipment_0:0 "Armstrong Whitworth Whitley"
-ENG_tac_bomber_equipment_0_short:0 "Whitley"
-ENG_tac_bomber_equipment_1:0 "Vickers Wellington"
-ENG_tac_bomber_equipment_1_short:0 "Wellington"
-ENG_tac_bomber_equipment_2:0 "Bristol Beaufort"
-ENG_tac_bomber_equipment_2_short:0 "Beaufort"
-ENG_tac_bomber_equipment_3:0 "de Havilland Mosquito B"
-ENG_tac_bomber_equipment_3_short:0 "Mosquito B"
+ENG_tac_bomber_equipment_0:0 "Boulton-Paul Overstrand"
+ENG_tac_bomber_equipment_0_short:0 "Overstrand"
+ENG_tac_bomber_equipment_1:0 "Handley-Page Hampden"
+ENG_tac_bomber_equipment_1_short:0 "Hampden"
+ENG_tac_bomber_equipment_2:0 "Armstrong-Whitworth Albermale"
+ENG_tac_bomber_equipment_2_short:0 "Albermale"
+ENG_tac_bomber_equipment_3:0 "de Havilland Mosquito"
+ENG_tac_bomber_equipment_3_short:0 "Mosquito"
 ENG_jet_tac_bomber_equipment_1:0 "de Havilland Venom"
 ENG_jet_tac_bomber_equipment_1_short:0 "Venom"
-ENG_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
-ENG_jet_tac_bomber_equipment_2_short:0 "Canberra"
-ENG_nav_bomber_equipment_1:0 "Fairey Swordfish"
-ENG_nav_bomber_equipment_1_short:0 "Swordfish"
-ENG_nav_bomber_equipment_2:0 "Fairey Albacore"
-ENG_nav_bomber_equipment_2_short:0 "Albacore"
-ENG_nav_bomber_equipment_3:0 "Fairey Barracuda"
-ENG_nav_bomber_equipment_3_short:0 "Barracuda"
-ENG_CAS_equipment_1:0 "Hawker Hector"
-ENG_CAS_equipment_1_short:0 "Hector"
+ENG_jet_tac_bomber_equipment_2:0 "English Electric Lincoln"
+ENG_jet_tac_bomber_equipment_2_short:0 "Lincoln"
+ENG_nav_bomber_equipment_1:0 "Blackburn Baffin"
+ENG_nav_bomber_equipment_1_short:0 "Baffin"
+ENG_nav_bomber_equipment_2:0 "Blackburn Skua"
+ENG_nav_bomber_equipment_2_short:0 "Skua"
+ENG_nav_bomber_equipment_3:0 "Blackburn Firebrand"
+ENG_nav_bomber_equipment_3_short:0 "Firebrand"
+ENG_CAS_equipment_1:0 "Hawker Hind"
+ENG_CAS_equipment_1_short:0 "Hind"
 ENG_CAS_equipment_2:0 "Hawker Typhoon"
 ENG_CAS_equipment_2_short:0 "Typhoon"
 ENG_CAS_equipment_3:0 "Hawker Tempest"
 ENG_CAS_equipment_3_short:0 "Tempest"
-ENG_cv_nav_bomber_equipment_1:0 "Blackburn Shark"
-ENG_cv_nav_bomber_equipment_1_short:0 "Shark"
-ENG_cv_nav_bomber_equipment_2:0 "Blackburn Roc"
-ENG_cv_nav_bomber_equipment_2_short:0 "Roc"
+ENG_cv_nav_bomber_equipment_1:0 "Blackburn Baffin"
+ENG_cv_nav_bomber_equipment_1_short:0 "Baffin"
+ENG_cv_nav_bomber_equipment_2:0 "Blackburn Skua"
+ENG_cv_nav_bomber_equipment_2_short:0 "Skua"
 ENG_cv_nav_bomber_equipment_3:0 "Blackburn Firebrand"
 ENG_cv_nav_bomber_equipment_3_short:0 "Firebrand"
-ENG_cv_CAS_equipment_1:0 "Hawker Osprey"
-ENG_cv_CAS_equipment_1_short:0 "Osprey"
-ENG_cv_CAS_equipment_2:0 "Blackburn Skua"
-ENG_cv_CAS_equipment_2_short:0 "Skua"
-ENG_cv_CAS_equipment_3:0 "Hawker Sea Fury"
-ENG_cv_CAS_equipment_3_short:0 "Sea Fury"
+ENG_cv_CAS_equipment_1:0 "Hawker Hind"
+ENG_cv_CAS_equipment_1_short:0 "Hind"
+ENG_cv_CAS_equipment_2:0 "Hawker Typhoon"
+ENG_cv_CAS_equipment_2_short:0 "Typhoon"
+ENG_cv_CAS_equipment_3:0 "Hawker Tempest"
+ENG_cv_CAS_equipment_3_short:0 "Tempest"
 ENG_cv_fighter_equipment_0:0 "Hawker Nimrod"
 ENG_cv_fighter_equipment_0_short:0 "Nimrod"
-ENG_cv_fighter_equipment_1:0 "Gloster Sea Gladiator"
-ENG_cv_fighter_equipment_1_short:0 "Sea Gladiator"
-ENG_cv_fighter_equipment_2:0 "Fairey Fulmar"
-ENG_cv_fighter_equipment_2_short:0 "Fulmar"
-ENG_cv_fighter_equipment_3:0 "Fairey Firefly"
-ENG_cv_fighter_equipment_3_short:0 "Firefly"
+ENG_cv_fighter_equipment_1:0 "Hawker Sea Hurricane"
+ENG_cv_fighter_equipment_1_short:0 "Sea Hurricane"
+ENG_cv_fighter_equipment_2:0 "Hawker Sea Spitfire"
+ENG_cv_fighter_equipment_2_short:0 "Sea Spitfire"
+ENG_cv_fighter_equipment_3:0 "Hawker Sea Spiteful"
+ENG_cv_fighter_equipment_3_short:0 "Sea Spiteful"
 CAN_fighter_equipment_0:0 "Gloster Gladiator"
 AST_fighter_equipment_0:0 "Gloster Gladiator"
 NZL_fighter_equipment_0:0 "Gloster Gladiator"
