--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -9,6 +9,12 @@ SIA_RPC_good:0 "Bountiful Harvest Year"
 SIA_RPC_neutral:0 "Normal Harvest Year"
 SIA_RPC_bad:0 "Abysmal Harvest Year"
 
+SIA_airport_authority_idea:0 "Airport Authority of Siam"
+SIA_airport_authority_idea_desc:0 "The AAS is responsible for co-ordinating international and domestic flights within the [SIA.GetNameDef] airspace, as well as maintaining civilian airports"
+SIA_air_production:0 "Expanded TAI Factories"
+SIA_air_production_desc:0 "Founded as an seperate entity from the RSAFW by the Royal Siamese Air Corps - they're in charge of developing authentic Siamese aircraft"
+SIA_air_focus: "Rule the Skies"
+
 ### Parties Siam/Thailand ###
 SIA_totalist_party:0 "Pak Kommunist Siam"
 SIA_totalist_party_long:0 "Pak Kommunist Siam(Communist Party of Siam)"
@@ -143,6 +149,7 @@ siam.501.d:0 "Prasert Eiwchai - a prominent leader of the Siamese Syndicalist mo
 siam.501.a:0 "A State Funeral for Him"
 
 ### NF Tree - very WIP right now, don't touch the description yet ###
+ ### Political Path ###
  SIA_prajadhipokreform:0 "Prajadhipok's Reform"
  SIA_prajadhipokreform_desc:0 "With the new economic crisis going on - maybe this is the best chance for us to enact new reforms as the old guard nobilities won't voiced much opposition, or will they?"
  SIA_ratthasapha:0 "Formation of the Ratthasapha"
@@ -187,6 +194,8 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_adevotedmonarchy_desc:0 "By working closely with our subjects in developing the nation - we've gain staunch support from the rural areas which also served as a deterrent to the scarlet phantom known as Syndicalist threat."
  SIA_nationwidelandreform_desc:0 "There are lots of lands across the country which is own by the nobilities but left abandonned due to whatever reasons - by distributing them to the poor landless rice farmers, much more produtivity can be gained from those lands but that'll surely provoked some landlords. "
  SIA_fiveyearplan_desc:0 "By encouraging the development of the rural areas by promoting infrastructure and industrial development - we're well on the road to join the Siwilai (Civilized) countries list like Japan and South America."
+ 
+ ### Government Reform Path ###
  SIA_governmentalreform:0 "Governmental Reform"
  SIA_juridicialreform:0 "Juridicial Reform"
  SIA_centralizedpolicecommand:0 "Centralized Police Command"
@@ -195,6 +204,8 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_regionaluniversities_desc:0 "SIA_regionaluniversities_desc"
  SIA_regionaluniversities:0 "Creation of Regional Universities"
  SIA_kingmongkutinstitute:0 "King Mongkut's Institute of Technology"
+ 
+ ### Economic Path ###
  SIA_intialeconomictsabilisation:0 "Intial Economic Stabilisaton"
  SIA_kickstartlocalbusiness:0 "Kickstart Local Business"
  SIA_bailoutsiamcement:0 "Bailout Siam Cement"
@@ -215,6 +226,8 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_kanchanaburiironreservoir:0 "Exploit Kanchanaburi Iron Reservoir"
  SIA_expandloeimines:0 "Expand Loei Iron Mines"
  SIA_tigereconomy:0 "Tiger Club Economy"
+ 
+ ### Agricultural Path ###
  SIA_agriculuralmechanisation:0 "Agricultural Mechanisation"
  SIA_agrarianscoop:0 "Agrarian Co-operatives"
  SIA_communalapproach:0 "Communal Approach"
@@ -224,6 +237,8 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_exportrice:0 "Export-Oriented Rice Production"
  SIA_ricesubsidyscheme:0 "Rice Subsidy Scheme"
  SIA_worldgranary:0 "Granary of the World"
+ 
+ ### Transportation Path ###
  SIA_nationalhighway:0 "National Highway Commission"
  SIA_railwaygauge:0 "Standardisation of Railway Gauge"
  SIA_isanrailway:0 "Isan Railway Expansion"
@@ -238,16 +253,17 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_merchantmarines:0 "Modern Merchant Marines"
  SIA_foreigninvestment:0 "Foreign Investments"
  SIA_twooceantradinghub:0 "Two-Ocean Trading Hub"
- SIA_luangphibunplan:0 "Phibunsongkhram's Reform"
+ 
+ ### Army Path ###
+ SIA_royalsiamesearmy:0 "Royal Siamese Army"
+ SIA_phibunsongkhramplan:0 "Phibunsongkhram's Reform"
  SIA_seriroengritplan:0 "Seriroengrit's Reform"
  SIA_phrayaphahonplan:0 "Phahonpolpayuhasena's Plan"
  SIA_luangphibunplan_desc:0 "Emphasized Superior Firepower Doctrine"
  SIA_seriroengritplan_desc:0 "Emphasizes Mass Combat Doctrine"
  SIA_phrayaphahonplan_desc:0 "Emphasizes Grand battleplan Doctrine"
- SIA_amodernarmy:0 "-"
  SIA_militaryaffairs:0 "Military Affaris"
  SIA_jungletraining:0 "Jungle Combat Training"
- SIA_phibunsongkhramplan:0 "Phibunsongkhram's Reform"
  SIA_femalecorps:0 "Suranaree Corps"
  SIA_asymmetricalwarfare:0 "Asymmetrical Warfare"
  SIA_newstandardrifle:0 "New Standard Rifle"
@@ -257,7 +273,6 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_expandsupportcapaciy:0 "Expand Support Capacity"
  SIA_armyaffairs:0 "Army Reorganization"
  SIA_flexiblechainofcommand:0 "Flexible Chain of Command"
- SIA_royalsiamesearmy:0 "Royal Siamese Army"
  SIA_specialforce:0 "Special Warfare Command"
  SIA_counterinsurgencytactics:0 "Counter-Insurgency Tactics"
  SIA_taharpran:0 "Taharn Pran"
@@ -266,6 +281,8 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_royalmunitionsfactory:0 "Royal Munitions Factory"
  SIA_industrialmobilization:0 "Industrial Mobilization Plan"
  SIA_expandsupportcapacity:0 "Expand Support Capacity"
+ 
+ ### Navy Path ###
  SIA_royalsiamesenavy:0 "Royal Siamese Navy"
  SIA_expandmarinescorps:0 "Expand Navikkayothin Corps"
  SIA_newflagship:0 "New Flagship"
@@ -277,6 +294,8 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_expandsattahip:0 "Expand Sattahip"
  SIA_wolfpacks:0 "Convoy Hunting"
  SIA_alargefleet:0 "Fleet in Being"
+ 
+ ### Air Forces Path ###
  SIA_royalsiameseaircorps:0 "Royal Siamese Air Corps"
  SIA_airportauthority:0 "Airport Authority of Siam"
  SIA_antiairsystem:0 "Air Raid Preparations"
@@ -295,3 +314,12 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_electronicsresearch:0 "Electronics Research"
  SIA_radar:0 "RADAR"
  SIA_rulerofheskies:0 "Protector of the Sky"
+ 
+ ### HAPAG Path ###
+ SIA_renegiotiatedealwithHAPAG:0 "Secret Deal with HAPAG"
+ SIA_newgermaninvestments:0 "German Industrial Investments"
+ SIA_thegoldentriangle:0 "The Golden Triangle"
+ SIA_increaseopiumoutput:0 "Increase Opium Production"
+ SIA_bangkokdockexpansion:0 "Bangkok Dock Expansion"
+ SIA_angyiipurge:0 "War against the Triads"
+ SIA_germanprocurementprogramme:0 "German-led Army Modernization Programme"
