--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -240,6 +240,7 @@ siam.501.a:0 "A State Funeral for Him"
  
  ### Transportation Path ###
  SIA_nationalhighway:0 "National Highway Commission"
+ SIA_nationalhighway_desc:0 "Expansion of Route 3 (Sukhumvit Road: Bangkok - Rayong) and Route 1 (Vachiravut Road: Bangkok - Lopburi) is being considered by the government for some time now - with the creation of National Highway Commission, perhaps things should've progressed much more smoothly."
  SIA_railwaygauge:0 "Standardisation of Railway Gauge"
  SIA_isanrailway:0 "Isan Railway Expansion"
  SIA_southernrailway:0 "Southern Railway Expansion"
