Siamese Navy Path effects

--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -13,7 +13,8 @@ SIA_airport_authority_idea:0 "Airport Authority of Siam"
 SIA_airport_authority_idea_desc:0 "The AAS is responsible for co-ordinating international and domestic flights within the [SIA.GetNameDef] airspace, as well as maintaining civilian airports"
 SIA_air_production:0 "Expanded TAI Factories"
 SIA_air_production_desc:0 "Founded as an seperate entity from the RSAFW by the Royal Siamese Air Corps - they're in charge of developing authentic Siamese aircraft"
-SIA_air_focus: "Rule the Skies"
+SIA_air_focus: "Protector of the Skies"
+SIA_navy_focus:0 "Two-Ocean Navy"
 
 ### Parties Siam/Thailand ###
 SIA_totalist_party:0 "Pak Kommunist Siam"
