...and one more

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -437,6 +437,7 @@ kongsberg:0 "Kongsberg Våpenfabrikk"
 norsk_sprengstoff:0 "Norsk Sprængstofindustri"
 norsk_automobil:0 "Den Norske Automobilfabrikk"
 thunes_mek:0 "Thunes Mekaniske Verksted"
+norges_statsbaner:0 "Norges Statsbaner"
 kjeller_flyfabrikk:0 "Kjeller Flyfabrikk"
 marinens_flyvebaat:0 "Marinens Flyvebaatfabrikk"
 marinens_hovedverft:0 "Marinens Hovedverft"
